{
  "version": 4,
  "terraform_version": "0.14.10",
  "serial": 239,
  "lineage": "12655922-a45f-b593-adfd-bcee32ae19c0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myapp_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:429710982531:vpc/vpc-09aa99b9eb5eaf2e0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-095e479e9530cb4cf",
            "default_route_table_id": "rtb-059fad4f51f63d598",
            "default_security_group_id": "sg-02b6f5479ec0e5998",
            "dhcp_options_id": "dopt-7d31eb16",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-09aa99b9eb5eaf2e0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-059fad4f51f63d598",
            "owner_id": "429710982531",
            "tags": {
              "Name": "development-vpc"
            },
            "tags_all": {
              "Name": "development-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.myapp-subnet",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "drtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:429710982531:route-table/rtb-059fad4f51f63d598",
            "default_route_table_id": "rtb-059fad4f51f63d598",
            "id": "rtb-059fad4f51f63d598",
            "owner_id": "429710982531",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f658f07d5dc1bdb4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "drtb"
            },
            "vpc_id": "vpc-09aa99b9eb5eaf2e0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myapp_vpc",
            "module.myapp-subnet.aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-subnet",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:429710982531:internet-gateway/igw-0f658f07d5dc1bdb4",
            "id": "igw-0f658f07d5dc1bdb4",
            "owner_id": "429710982531",
            "tags": {
              "Name": "development-igw"
            },
            "vpc_id": "vpc-09aa99b9eb5eaf2e0"
          },
          "dependencies": [
            "aws_vpc.myapp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myapp_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:429710982531:subnet/subnet-0139ed2134d996425",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0139ed2134d996425",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "429710982531",
            "tags": {
              "Name": "development-subnet-1"
            },
            "tags_all": {
              "Name": "development-subnet-1"
            },
            "vpc_id": "vpc-09aa99b9eb5eaf2e0"
          },
          "dependencies": [
            "aws_vpc.myapp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-webserver",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "myapp-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:429710982531:security-group/sg-02b6f5479ec0e5998",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02b6f5479ec0e5998",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "port 8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "183.83.213.53/32"
                ],
                "description": "port 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "default",
            "owner_id": "429710982531",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "development-default-sg"
            },
            "vpc_id": "vpc-09aa99b9eb5eaf2e0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myapp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-webserver",
      "mode": "managed",
      "type": "aws_instance",
      "name": "myapp-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d645a0f4b1456220",
            "arn": "arn:aws:ec2:ap-south-1:429710982531:instance/i-0be51ceda92bfc459",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0be51ceda92bfc459",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "development_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09fb8d4307be4a8da",
            "private_dns": "ip-10-0-0-224.ap-south-1.compute.internal",
            "private_ip": "10.0.0.224",
            "public_ip": "35.154.171.134",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0baa5ecfa04cc542e",
                "volume_size": 2,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0139ed2134d996425",
            "tags": {
              "Name": "terraform_ec2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02b6f5479ec0e5998"
            ]
          },
          "dependencies": [
            "aws_vpc.myapp_vpc",
            "module.myapp-subnet.aws_subnet.myapp_subnet_1",
            "module.myapp-webserver.aws_default_security_group.myapp-sg",
            "module.myapp-webserver.aws_key_pair.myapp_key",
            "module.myapp-webserver.data.aws_ami.linux_ami"
          ]
        }
      ]
    }
  ]
}